@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was (or could have been) crashing
 
+Jul 10, 2001
+	image.tostring makes alpha from colorkey, if asking for RGBA
+
 Jul 6, 2001
 	added python 1.5.2 compatability
 
@@ -11,7 +14,7 @@ June 25, 2001
 	horizontal transform.flip() was reading pixels off by one [BUG]
 
 June 24, 2001
-	calling set_mode will change all references to the  display surface
+	calling set_mode will change all references to the display surface
 
 
 pygame-11
